generated/JavaParser.py
# Generated from Java.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class JavaParser ( Parser ):

    grammarFileName = "Java.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "'return'", 
                     "'static'", "'private'", "'public'", "'protected'", 
                     "'if'", "'else'", "'<'", "'<='", "'>'", "'>='", "'!'", 
                     "'while'", "'for'", "'class'", "'boolean'", "'int'", 
                     "'String'", "'double'", "'void'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'&&'", "'||'", "'=='", "'!='", "';'", 
                     "','", "'\"'", "'.'" ]

    symbolicNames = [ "<INVALID>", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", 
                      "RIGHT_BRACE", "RETURN", "STATIC", "PRIVATE", "PUBLIC", 
                      "PROTECTED", "IF", "ELSE", "LESS", "LESS_EQUAL", "GREATER", 
                      "GREATER_EQUAL", "EXCLAMATION", "WHILE", "FOR", "CLASS", 
                      "T_BOOLEAN", "T_INT", "T_STRING", "T_DOUBLE", "T_VOID", 
                      "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", "ANDAND", 
                      "OROR", "EQUAL", "NOT_EQUAL", "SEMI", "COMMA", "QUOT", 
                      "DOT", "WHITESPACE", "NEWLINE", "BLOCKCOMMENT", "LINECOMMENT", 
                      "V_INT", "NUMBER", "V_DOUBLE", "V_BOOLEAN", "V_STRING", 
                      "WORD", "UPPERCASE" ]

    RULE_logical = 0
    RULE_var_type = 1
    RULE_value = 2
    RULE_comperator = 3
    RULE_and_operator = 4
    RULE_or_operator = 5
    RULE_logic_operator = 6
    RULE_operator = 7
    RULE_word = 8
    RULE_assign = 9
    RULE_exclamtion = 10
    RULE_plus = 11
    RULE_minus = 12
    RULE_left_paren = 13
    RULE_right_paren = 14
    RULE_return_kw = 15
    RULE_if_kw = 16
    RULE_else_kw = 17
    RULE_right_brace = 18
    RULE_left_brace = 19
    RULE_class_kw = 20
    RULE_static_kw = 21
    RULE_for_kw = 22
    RULE_while_kw = 23
    RULE_semi_sign = 24
    RULE_comma_sign = 25
    RULE_operation = 26
    RULE_assigne = 27
    RULE_assignment = 28
    RULE_definition = 29
    RULE_declaration = 30
    RULE_increment = 31
    RULE_decrement = 32
    RULE_expression = 33
    RULE_return_def = 34
    RULE_line = 35
    RULE_if_definition = 36
    RULE_while_definition = 37
    RULE_for_index_virable = 38
    RULE_for_condition = 39
    RULE_for_definition = 40
    RULE_code = 41
    RULE_body = 42
    RULE_access_modifier = 43
    RULE_method_params = 44
    RULE_method = 45
    RULE_static_method = 46
    RULE_class_def = 47

    ruleNames =  [ "logical", "var_type", "value", "comperator", "and_operator", 
                   "or_operator", "logic_operator", "operator", "word", 
                   "assign", "exclamtion", "plus", "minus", "left_paren", 
                   "right_paren", "return_kw", "if_kw", "else_kw", "right_brace", 
                   "left_brace", "class_kw", "static_kw", "for_kw", "while_kw", 
                   "semi_sign", "comma_sign", "operation", "assigne", "assignment", 
                   "definition", "declaration", "increment", "decrement", 
                   "expression", "return_def", "line", "if_definition", 
                   "while_definition", "for_index_virable", "for_condition", 
                   "for_definition", "code", "body", "access_modifier", 
                   "method_params", "method", "static_method", "class_def" ]

    EOF = Token.EOF
    LEFT_PAREN=1
    RIGHT_PAREN=2
    LEFT_BRACE=3
    RIGHT_BRACE=4
    RETURN=5
    STATIC=6
    PRIVATE=7
    PUBLIC=8
    PROTECTED=9
    IF=10
    ELSE=11
    LESS=12
    LESS_EQUAL=13
    GREATER=14
    GREATER_EQUAL=15
    EXCLAMATION=16
    WHILE=17
    FOR=18
    CLASS=19
    T_BOOLEAN=20
    T_INT=21
    T_STRING=22
    T_DOUBLE=23
    T_VOID=24
    ASSIGN=25
    PLUS=26
    MINUS=27
    MUL=28
    DIV=29
    ANDAND=30
    OROR=31
    EQUAL=32
    NOT_EQUAL=33
    SEMI=34
    COMMA=35
    QUOT=36
    DOT=37
    WHITESPACE=38
    NEWLINE=39
    BLOCKCOMMENT=40
    LINECOMMENT=41
    V_INT=42
    NUMBER=43
    V_DOUBLE=44
    V_BOOLEAN=45
    V_STRING=46
    WORD=47
    UPPERCASE=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class LogicalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def V_BOOLEAN(self):
            return self.getToken(JavaParser.V_BOOLEAN, 0)

        def V_INT(self):
            return self.getToken(JavaParser.V_INT, 0)

        def word(self):
            return self.getTypedRuleContext(JavaParser.WordContext,0)


        def left_paren(self):
            return self.getTypedRuleContext(JavaParser.Left_parenContext,0)


        def expression(self):
            return self.getTypedRuleContext(JavaParser.ExpressionContext,0)


        def right_paren(self):
            return self.getTypedRuleContext(JavaParser.Right_parenContext,0)


        def getRuleIndex(self):
            return JavaParser.RULE_logical

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical" ):
                listener.enterLogical(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical" ):
                listener.exitLogical(self)




    def logical(self):

        localctx = JavaParser.LogicalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_logical)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JavaParser.V_BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(JavaParser.V_BOOLEAN)
                pass
            elif token in [JavaParser.V_INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(JavaParser.V_INT)
                pass
            elif token in [JavaParser.WORD]:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.word()
                pass
            elif token in [JavaParser.LEFT_PAREN]:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.left_paren()
                self.state = 100
                self.expression(0)
                self.state = 101
                self.right_paren()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_BOOLEAN(self):
            return self.getToken(JavaParser.T_BOOLEAN, 0)

        def T_INT(self):
            return self.getToken(JavaParser.T_INT, 0)

        def T_STRING(self):
            return self.getToken(JavaParser.T_STRING, 0)

        def T_DOUBLE(self):
            return self.getToken(JavaParser.T_DOUBLE, 0)

        def T_VOID(self):
            return self.getToken(JavaParser.T_VOID, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = JavaParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JavaParser.T_BOOLEAN) | (1 << JavaParser.T_INT) | (1 << JavaParser.T_STRING) | (1 << JavaParser.T_DOUBLE) | (1 << JavaParser.T_VOID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def V_DOUBLE(self):
            return self.getToken(JavaParser.V_DOUBLE, 0)

        def V_STRING(self):
            return self.getToken(JavaParser.V_STRING, 0)

        def V_BOOLEAN(self):
            return self.getToken(JavaParser.V_BOOLEAN, 0)

        def V_INT(self):
            return self.getToken(JavaParser.V_INT, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = JavaParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JavaParser.V_INT) | (1 << JavaParser.V_DOUBLE) | (1 << JavaParser.V_BOOLEAN) | (1 << JavaParser.V_STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LESS(self):
            return self.getToken(JavaParser.LESS, 0)

        def LESS_EQUAL(self):
            return self.getToken(JavaParser.LESS_EQUAL, 0)

        def GREATER(self):
            return self.getToken(JavaParser.GREATER, 0)

        def GREATER_EQUAL(self):
            return self.getToken(JavaParser.GREATER_EQUAL, 0)

        def EQUAL(self):
            return self.getToken(JavaParser.EQUAL, 0)

        def NOT_EQUAL(self):
            return self.getToken(JavaParser.NOT_EQUAL, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_comperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComperator" ):
                listener.enterComperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComperator" ):
                listener.exitComperator(self)




    def comperator(self):

        localctx = JavaParser.ComperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JavaParser.LESS) | (1 << JavaParser.LESS_EQUAL) | (1 << JavaParser.GREATER) | (1 << JavaParser.GREATER_EQUAL) | (1 << JavaParser.EQUAL) | (1 << JavaParser.NOT_EQUAL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class And_operatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ANDAND(self):
            return self.getToken(JavaParser.ANDAND, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_and_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd_operator" ):
                listener.enterAnd_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd_operator" ):
                listener.exitAnd_operator(self)




    def and_operator(self):

        localctx = JavaParser.And_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_and_operator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(JavaParser.ANDAND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Or_operatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OROR(self):
            return self.getToken(JavaParser.OROR, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_or_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr_operator" ):
                listener.enterOr_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr_operator" ):
                listener.exitOr_operator(self)




    def or_operator(self):

        localctx = JavaParser.Or_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_or_operator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(JavaParser.OROR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Logic_operatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def and_operator(self):
            return self.getTypedRuleContext(JavaParser.And_operatorContext,0)


        def or_operator(self):
            return self.getTypedRuleContext(JavaParser.Or_operatorContext,0)


        def getRuleIndex(self):
            return JavaParser.RULE_logic_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_operator" ):
                listener.enterLogic_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_operator" ):
                listener.exitLogic_operator(self)




    def logic_operator(self):

        localctx = JavaParser.Logic_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_logic_operator)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JavaParser.ANDAND]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.and_operator()
                pass
            elif token in [JavaParser.OROR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.or_operator()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(JavaParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(JavaParser.MINUS, 0)

        def DIV(self):
            return self.getToken(JavaParser.DIV, 0)

        def MUL(self):
            return self.getToken(JavaParser.MUL, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)




    def operator(self):

        localctx = JavaParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JavaParser.PLUS) | (1 << JavaParser.MINUS) | (1 << JavaParser.MUL) | (1 << JavaParser.DIV))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WordContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(JavaParser.WORD, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_word

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWord" ):
                listener.enterWord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWord" ):
                listener.exitWord(self)




    def word(self):

        localctx = JavaParser.WordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_word)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(JavaParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(JavaParser.ASSIGN, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = JavaParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(JavaParser.ASSIGN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExclamtionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXCLAMATION(self):
            return self.getToken(JavaParser.EXCLAMATION, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_exclamtion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExclamtion" ):
                listener.enterExclamtion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExclamtion" ):
                listener.exitExclamtion(self)




    def exclamtion(self):

        localctx = JavaParser.ExclamtionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exclamtion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(JavaParser.EXCLAMATION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PlusContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(JavaParser.PLUS, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_plus

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlus" ):
                listener.enterPlus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlus" ):
                listener.exitPlus(self)




    def plus(self):

        localctx = JavaParser.PlusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_plus)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(JavaParser.PLUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MinusContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINUS(self):
            return self.getToken(JavaParser.MINUS, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_minus

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinus" ):
                listener.enterMinus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinus" ):
                listener.exitMinus(self)




    def minus(self):

        localctx = JavaParser.MinusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_minus)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(JavaParser.MINUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Left_parenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PAREN(self):
            return self.getToken(JavaParser.LEFT_PAREN, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_left_paren

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeft_paren" ):
                listener.enterLeft_paren(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeft_paren" ):
                listener.exitLeft_paren(self)




    def left_paren(self):

        localctx = JavaParser.Left_parenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_left_paren)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(JavaParser.LEFT_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Right_parenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHT_PAREN(self):
            return self.getToken(JavaParser.RIGHT_PAREN, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_right_paren

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRight_paren" ):
                listener.enterRight_paren(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRight_paren" ):
                listener.exitRight_paren(self)




    def right_paren(self):

        localctx = JavaParser.Right_parenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_right_paren)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(JavaParser.RIGHT_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(JavaParser.RETURN, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_return_kw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_kw" ):
                listener.enterReturn_kw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_kw" ):
                listener.exitReturn_kw(self)




    def return_kw(self):

        localctx = JavaParser.Return_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_return_kw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(JavaParser.RETURN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(JavaParser.IF, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_if_kw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_kw" ):
                listener.enterIf_kw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_kw" ):
                listener.exitIf_kw(self)




    def if_kw(self):

        localctx = JavaParser.If_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_if_kw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(JavaParser.IF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Else_kwContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(JavaParser.ELSE, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_else_kw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_kw" ):
                listener.enterElse_kw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_kw" ):
                listener.exitElse_kw(self)




    def else_kw(self):

        localctx = JavaParser.Else_kwContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_else_kw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(JavaParser.ELSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Right_braceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHT_BRACE(self):
            return self.getToken(JavaParser.RIGHT_BRACE, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_right_brace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRight_brace" ):
                listener.enterRight_brace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRight_brace" ):
                listener.exitRight_brace(self)




    def right_brace(self):

        localctx = JavaParser.Right_braceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_right_brace)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(JavaParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Left_braceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACE(self):
            return self.getToken(JavaParser.LEFT_BRACE, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_left_brace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeft_brace" ):
                listener.enterLeft_brace(self)
